--- a/beers.html
+++ b/beers.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Garage project</title>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/product/">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,45 +20,109 @@
     </div>
   </div>
 
-  <div class="position-relative overflow-hidden text-center bg-light">
-    <div class="w-100 col-md-10 p-lg-5 mx-auto my-3 d-flex justify-content-between align-items-center">
+  <div class="position-relative zindex text-center bg-light">
+    <div class="w-100 col-xl-10 col-md-10 col-lg-12 p-lg-5 mx-auto my-3 d-flex justify-content-between align-items-center">
       <p class="my-0" id="product-amount">23 Products</p>
       <div class="col-md-6 display-on-desk">
         <ul class="list">
-          <li class="list-item">Style +</li>
-          <li class="list-item">Volume +</li>
-          <li class="list-item">Alcohol Percentage +</li>
-          <li class="list-item">Price +</li>
-        </ul>
-        </div>
-      <p class="my-0" id="filter-menu">Filter +</p>
-      <p class="my-0 display-on-desk" id="reset-filters">Reset Filters</p>
-    </div>
-  </div>
+          <li class="list-item">
+            <div class="btn-group">
+              <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Style</button>
+              <div class="dropdown-menu">
+                <div class="form-group d-flex align-items-baseline ml-5">
+                  <input class="form-check-input" type="checkbox" id="all-style">
+                  <label class="form-check-label" for="all-style">All</label>
+                </div>
+                <div class="form-group d-flex align-items-baseline ml-5">
+                  <input class="form-check-input" type="checkbox" id="ipa-style">
+                  <label class="form-check-label" for="ipa-style">IPA</label>
+                </div>
+                <div class="form-group d-flex align-items-baseline ml-5">
+                  <input class="form-check-input" type="checkbox" id="pale-style">
+                  <label class="form-check-label" for="pale-style">Pale Ale</label>
+                </div>
+                <div class="form-group d-flex align-items-baseline ml-5">
+                  <input class="form-check-input" type="checkbox" id="lager-style">
+                  <label class="form-check-label" for="lager-style">Lager</label>
+                </div>
+                <div class="form-group d-flex align-items-baseline ml-5">
+                  <input class="form-check-input" type="checkbox" id="sour-style">
+                  <label class="form-check-label" for="sour-style">Sour</label>
+                </div>
+              
+              </div>
+            </div></li>
+            <li class="list-item">
+              <div class="btn-group">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Volume</button>
+                <div class="dropdown-menu">
+                <div class="form-group d-flex align-items-baseline ml-5">
+                  <input class="form-check-input" type="checkbox" id="all-volume">
+                  <label class="form-check-label" for="all-volume">All</label>
+                </div>
+                <div class="form-group d-flex align-items-baseline ml-5">
+                  <input class="form-check-input" type="checkbox" id="330-volume">
+                  <label class="form-check-label" for="330-volume">330ml</label>
+                </div>
+                <div class="form-group d-flex align-items-baseline ml-5">
+                  <input class="form-check-input" type="checkbox" id="440-volume">
+                  <label class="form-check-label" for="440-volume">440ml</label>
+                </div>
+                <div class="form-group d-flex align-items-baseline ml-5">
+                  <input class="form-check-input" type="checkbox" id="pack-volume">
+                  <label class="form-check-label" for="pack-volume">Pack</label>
+                </div>
+              </div>
+              </div></li>
+              <li class="list-item">
+                <div class="btn-group">
+                  <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Alcohol Percentage</button>
+                  <div class="dropdown-menu">
+                    <p>
+                        <label for="amount1">Price range:</label>
+                        <input type="text" id="amount1" readonly style="border:0; color:#f6931f; font-weight:bold;">
+                      </p>
+                      <div id="slider-range1"></div>
+                  </div>
+                </div></li>
+                <li class="list-item">
+                  <div class="btn-group">
+                    <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Price</button>
+                    <div class="dropdown-menu">
+                      
+                      <p>
+                        <label for="amount2">Price range:</label>
+                        <input type="text" id="amount2" readonly style="border:0; color:#f6931f; font-weight:bold;">
+                      </p>
+                      <div id="slider-range2"></div>
 
-  <div id="printOutput"></div>
+                    </div>
+                  </div></li>
+                  <li class="list-item">
+              <div class="btn-group">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sort</button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Separated link</a>
+                </div>
+              </div></li>
+                </ul>
+              </div>
+              <p class="my-0" id="filter-menu">Filter +</p>
+              <p class="my-0 display-on-desk" id="reset-filters">Reset Filters</p>
+            </div>
+          </div>
 
-  <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-      <div class="my-3 py-3">
-        <h2 class="display-5">Another headline</h2>
-        <p class="lead">And an even wittier subheading.</p>
-      </div>
-      <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-    </div>
+          <div id="printOutput"></div>
 
-    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-      <div class="my-3 p-3">
-        <h2 class="display-5">Another headline</h2>
-        <p class="lead">And an even wittier subheading.</p>
-      </div>
-      <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-    </div>
-  </div>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="js/script.js"></script>
-</body>
-</html>
+          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+          <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+          <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+          <script src="js/script.js"></script>
+        </body>
+        </html>
