--- a/beers.html
+++ b/beers.html
@@ -13,7 +13,7 @@
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
+<body class="pb-5">
   <div class="site-header py-1">
     <div class="container d-flex flex-md-row justify-content-center py-4">
       <h1 class="heading text-center">Garage Project</h1>
@@ -38,8 +38,8 @@
                   <label class="form-check-label" for="ipa-style">IPA</label>
                 </div>
                 <div class="form-group d-flex align-items-baseline ml-5">
-                  <input class="form-check-input" type="checkbox" id="pale-style">
-                  <label class="form-check-label" for="pale-style">Pale Ale</label>
+                  <input class="form-check-input" type="checkbox" id="ale-style">
+                  <label class="form-check-label" for="ale-style">Pale Ale</label>
                 </div>
                 <div class="form-group d-flex align-items-baseline ml-5">
                   <input class="form-check-input" type="checkbox" id="lager-style">
@@ -49,47 +49,47 @@
                   <input class="form-check-input" type="checkbox" id="sour-style">
                   <label class="form-check-label" for="sour-style">Sour</label>
                 </div>
-              
+
               </div>
             </div></li>
             <li class="list-item">
               <div class="btn-group">
                 <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Volume</button>
                 <div class="dropdown-menu">
-                <div class="form-group d-flex align-items-baseline ml-5">
-                  <input class="form-check-input" type="checkbox" id="all-volume">
-                  <label class="form-check-label" for="all-volume">All</label>
+                  <div class="form-group d-flex align-items-baseline ml-5">
+                    <input class="form-check-input" type="checkbox" id="all-volume">
+                    <label class="form-check-label" for="all-volume">All</label>
+                  </div>
+                  <div class="form-group d-flex align-items-baseline ml-5">
+                    <input class="form-check-input" type="checkbox" id="330-volume">
+                    <label class="form-check-label" for="330-volume">330ml</label>
+                  </div>
+                  <div class="form-group d-flex align-items-baseline ml-5">
+                    <input class="form-check-input" type="checkbox" id="440-volume">
+                    <label class="form-check-label" for="440-volume">440ml</label>
+                  </div>
+                  <div class="form-group d-flex align-items-baseline ml-5">
+                    <input class="form-check-input" type="checkbox" id="pack-volume">
+                    <label class="form-check-label" for="pack-volume">Pack</label>
+                  </div>
                 </div>
-                <div class="form-group d-flex align-items-baseline ml-5">
-                  <input class="form-check-input" type="checkbox" id="330-volume">
-                  <label class="form-check-label" for="330-volume">330ml</label>
-                </div>
-                <div class="form-group d-flex align-items-baseline ml-5">
-                  <input class="form-check-input" type="checkbox" id="440-volume">
-                  <label class="form-check-label" for="440-volume">440ml</label>
-                </div>
-                <div class="form-group d-flex align-items-baseline ml-5">
-                  <input class="form-check-input" type="checkbox" id="pack-volume">
-                  <label class="form-check-label" for="pack-volume">Pack</label>
-                </div>
-              </div>
               </div></li>
               <li class="list-item">
                 <div class="btn-group">
                   <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Alcohol Percentage</button>
                   <div class="dropdown-menu">
                     <p>
-                        <label for="amount1">Price range:</label>
-                        <input type="text" id="amount1" readonly style="border:0; color:#f6931f; font-weight:bold;">
-                      </p>
-                      <div id="slider-range1"></div>
+                      <label for="amount1">Price range:</label>
+                      <input type="text" id="amount1" readonly style="border:0; color:#f6931f; font-weight:bold;">
+                    </p>
+                    <div id="slider-range1"></div>
                   </div>
                 </div></li>
                 <li class="list-item">
                   <div class="btn-group">
                     <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Price</button>
                     <div class="dropdown-menu">
-                      
+
                       <p>
                         <label for="amount2">Price range:</label>
                         <input type="text" id="amount2" readonly style="border:0; color:#f6931f; font-weight:bold;">
@@ -99,30 +99,94 @@
                     </div>
                   </div></li>
                   <li class="list-item">
-              <div class="btn-group">
-                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sort</button>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Separated link</a>
+                    <div class="btn-group">
+                      <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sort</button>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Separated link</a>
+                      </div>
+                    </div></li>
+                  </ul>
                 </div>
-              </div></li>
-                </ul>
+                <p class="my-0" id="filter-menu">Filter +</p>
+                <p class="my-0 display-on-desk" id="reset-filters">Reset Filters</p>
               </div>
-              <p class="my-0" id="filter-menu">Filter +</p>
-              <p class="my-0 display-on-desk" id="reset-filters">Reset Filters</p>
             </div>
-          </div>
 
-          <div id="printOutput"></div>
 
-          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-          <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-          <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-          <script src="js/script.js"></script>
-        </body>
-        </html>
+            <!-- full screen filter page -->
+            <div class="filter-menu-container">
+              <div class="filter-menu-header">
+                <h1 class="filter-menu-heading">Filter</h1>
+                <button type="button" class="close-menu" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="filter-menu-body">
+                <h2 class="filter-menu-filter">Style</h2>
+                <div class="form-group ml-4">
+                  <input class="form-check-input" name="styles" type="checkbox" id="all-styles">
+                  <label class="form-check-label" for="all-styles">All</label>
+                </div>
+                <div class="form-group ml-4">
+                  <input class="form-check-input" name="styles" type="checkbox" id="ipa-styles">
+                  <label class="form-check-label" for="ipa-styles">IPA</label>
+                </div>
+                <div class="form-group ml-4">
+                  <input class="form-check-input" name="styles" type="checkbox" id="ale-styles">
+                  <label class="form-check-label" for="ale-styles">Pale Ale</label>
+                </div>
+                <div class="form-group ml-4">
+                  <input class="form-check-input" name="styles" type="checkbox" id="lager-styles">
+                  <label class="form-check-label" for="lager-styles">Lager</label>
+                </div>
+                <div class="form-group ml-4">
+                  <input class="form-check-input" name="styles" type="checkbox" id="sour-styles">
+                  <label class="form-check-label" for="sour-styles">Sour</label>
+                </div>
+                <h2 class="filter-menu-filter">Volume</h2>
+                <div class="form-group ml-4">
+                  <input class="form-check-input" type="checkbox" id="all-volumes">
+                  <label class="form-check-label" for="all-volumes">All</label>
+                </div>
+                <div class="form-group ml-4">
+                  <input class="form-check-input" type="checkbox" id="330-volumes">
+                  <label class="form-check-label" for="330-volumes">330ml</label>
+                </div>
+                <div class="form-group ml-4">
+                  <input class="form-check-input" type="checkbox" id="440-volumes">
+                  <label class="form-check-label" for="440-volumes">440ml</label>
+                </div>
+                <div class="form-group ml-4">
+                  <input class="form-check-input" type="checkbox" id="Pack-volumes">
+                  <label class="form-check-label" for="Pack-volumes">Pack</label>
+                </div>
+                <h2 class="filter-menu-filter">Alcohol Percentage</h2>
+                <p>
+                  <label for="amount3">Price range:</label>
+                  <input type="text" id="amount3" readonly style="border:0; color:#f6931f; font-weight:bold;">
+                </p>
+                <div id="slider-range3"></div>
+                <h2 class="filter-menu-filter">Price</h2>
+                <p>
+                  <label for="amount4">Price range:</label>
+                  <input type="text" id="amount4" readonly style="border:0; color:#f6931f; font-weight:bold;">
+                </p>
+                <div id="slider-range4"></div>
+              </div>
+            </div>
+
+
+            <div id="printOutput"></div>
+
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+            <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+            <script src="js/script.js"></script>
+          </body>
+          </html>
