--- a/beers.html
+++ b/beers.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Garage project</title>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/product/">
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -69,8 +69,8 @@
                     <label class="form-check-label" for="440-volume">440ml</label>
                   </div>
                   <div class="form-group d-flex align-items-baseline ml-5">
-                    <input class="form-check-input" type="checkbox" id="pack-volume">
-                    <label class="form-check-label" for="pack-volume">Pack</label>
+                    <input class="form-check-input" type="checkbox" id="Pack-volume">
+                    <label class="form-check-label" for="Pack-volume">Pack</label>
                   </div>
                 </div>
               </div></li>
