--- a/beers.html
+++ b/beers.html
@@ -14,15 +14,16 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="pb-5">
-  <div class="site-header py-1">
+  <div class="site-header py-1 position-relative">
     <div class="container d-flex flex-md-row justify-content-center py-4">
       <h1 class="heading text-center">Garage Project</h1>
     </div>
+    <i class="fas fa-shopping-cart"></i>
   </div>
 
   <div class="position-relative zindex text-center bg-light">
     <div class="w-100 col-xl-10 col-md-10 col-lg-12 p-lg-5 mx-auto my-3 d-flex justify-content-between align-items-center">
-      <p class="my-0" id="product-amount">23 Products</p>
+      <p class="my-0" id="product-amount"></p> <!-- js prints number of products here -->
       <div class="col-md-6 display-on-desk">
         <ul class="list">
           <li class="list-item">
@@ -30,23 +31,19 @@
               <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Style</button>
               <div class="dropdown-menu">
                 <div class="form-group d-flex align-items-baseline ml-5">
-                  <input class="form-check-input" type="checkbox" id="all-style">
-                  <label class="form-check-label" for="all-style">All</label>
-                </div>
-                <div class="form-group d-flex align-items-baseline ml-5">
-                  <input class="form-check-input" type="checkbox" id="ipa-style">
+                  <input class="form-check-input" name="styles" type="checkbox" id="ipa-style">
                   <label class="form-check-label" for="ipa-style">IPA</label>
                 </div>
                 <div class="form-group d-flex align-items-baseline ml-5">
-                  <input class="form-check-input" type="checkbox" id="ale-style">
+                  <input class="form-check-input" name="styles" type="checkbox" id="ale-style">
                   <label class="form-check-label" for="ale-style">Pale Ale</label>
                 </div>
                 <div class="form-group d-flex align-items-baseline ml-5">
-                  <input class="form-check-input" type="checkbox" id="lager-style">
+                  <input class="form-check-input" name="styles" type="checkbox" id="lager-style">
                   <label class="form-check-label" for="lager-style">Lager</label>
                 </div>
                 <div class="form-group d-flex align-items-baseline ml-5">
-                  <input class="form-check-input" type="checkbox" id="sour-style">
+                  <input class="form-check-input" name="styles" type="checkbox" id="sour-style">
                   <label class="form-check-label" for="sour-style">Sour</label>
                 </div>
 
@@ -57,19 +54,15 @@
                 <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Volume</button>
                 <div class="dropdown-menu">
                   <div class="form-group d-flex align-items-baseline ml-5">
-                    <input class="form-check-input" type="checkbox" id="all-volume">
-                    <label class="form-check-label" for="all-volume">All</label>
-                  </div>
-                  <div class="form-group d-flex align-items-baseline ml-5">
-                    <input class="form-check-input" type="checkbox" id="330-volume">
+                    <input class="form-check-input" name="volumes" name="volumes" name="volumes" type="checkbox" id="330-volume">
                     <label class="form-check-label" for="330-volume">330ml</label>
                   </div>
                   <div class="form-group d-flex align-items-baseline ml-5">
-                    <input class="form-check-input" type="checkbox" id="440-volume">
+                    <input class="form-check-input" name="volumes" name="volumes" type="checkbox" id="440-volume">
                     <label class="form-check-label" for="440-volume">440ml</label>
                   </div>
                   <div class="form-group d-flex align-items-baseline ml-5">
-                    <input class="form-check-input" type="checkbox" id="Pack-volume">
+                    <input class="form-check-input" name="volumes" type="checkbox" id="Pack-volume">
                     <label class="form-check-label" for="Pack-volume">Pack</label>
                   </div>
                 </div>
@@ -182,6 +175,9 @@
 
             <div id="printOutput"></div>
 
+            <div class="myModal-outer" id="modal-output"></div>
+
+            <script src="https://kit.fontawesome.com/6c7bb61f4b.js" crossorigin="anonymous"></script>
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
